// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TotalTimeDistribution should generate the plot for AMNH 1`] = `
<TotalTimeDistribution
  height={500}
  partner={
    Partner {
      "code": "AMNH",
      "name": "American Museum of Natural History",
    }
  }
  proposals={
    Array [
      Object {
        "timeRequests": Array [
          Object {
            "partner": Partner {
              "code": "AMNH",
              "name": "American Museum of Natural History",
            },
            "time": 45360,
          },
          Object {
            "partner": Partner {
              "code": "RSA",
              "name": "South Africa",
            },
            "time": 0,
          },
        ],
      },
      Object {
        "timeRequests": Array [
          Object {
            "partner": Partner {
              "code": "AMNH",
              "name": "American Museum of Natural History",
            },
            "time": 79200,
          },
          Object {
            "partner": Partner {
              "code": "RSA",
              "name": "South Africa",
            },
            "time": 0,
          },
        ],
      },
      Object {
        "timeRequests": Array [
          Object {
            "partner": Partner {
              "code": "AMNH",
              "name": "American Museum of Natural History",
            },
            "time": 6840,
          },
          Object {
            "partner": Partner {
              "code": "RSA",
              "name": "South Africa",
            },
            "time": 0,
          },
          Object {
            "partner": Partner {
              "code": "UW",
              "name": "University of Wisconsin",
            },
            "time": 86040,
          },
        ],
      },
      Object {
        "timeRequests": Array [
          Object {
            "partner": Partner {
              "code": "AMNH",
              "name": "American Museum of Natural History",
            },
            "time": 90000,
          },
          Object {
            "partner": Partner {
              "code": "RSA",
              "name": "South Africa",
            },
            "time": 280800,
          },
        ],
      },
      Object {
        "timeRequests": Array [
          Object {
            "partner": Partner {
              "code": "AMNH",
              "name": "American Museum of Natural History",
            },
            "time": 212040,
          },
          Object {
            "partner": Partner {
              "code": "RSA",
              "name": "South Africa",
            },
            "time": 0,
          },
        ],
      },
      Object {
        "timeRequests": Array [
          Object {
            "partner": Partner {
              "code": "AMNH",
              "name": "American Museum of Natural History",
            },
            "time": 111600,
          },
          Object {
            "partner": Partner {
              "code": "RSA",
              "name": "South Africa",
            },
            "time": 356400,
          },
        ],
      },
      Object {
        "timeRequests": Array [
          Object {
            "partner": Partner {
              "code": "AMNH",
              "name": "American Museum of Natural History",
            },
            "time": 106200,
          },
          Object {
            "partner": Partner {
              "code": "RSA",
              "name": "South Africa",
            },
            "time": 0,
          },
        ],
      },
      Object {
        "timeRequests": Array [
          Object {
            "partner": Partner {
              "code": "AMNH",
              "name": "American Museum of Natural History",
            },
            "time": 28080,
          },
          Object {
            "partner": Partner {
              "code": "RSA",
              "name": "South Africa",
            },
            "time": 0,
          },
        ],
      },
    ]
  }
  width={500}
>
  <g
    className="histogram total-time-distribution"
  >
    <Axes
      domain={
        Array [
          0,
          100,
        ]
      }
      height={500}
      margins={
        Object {
          "bottom": 50,
          "left": 50,
          "right": 10,
          "top": 10,
        }
      }
      range={
        Array [
          0,
          3,
        ]
      }
      width={500}
      xAxisTitle="Time (hrs)"
      yAxisTitle="N"
    >
      <g
        className="axes"
      >
        <Axis
          orientation="Top"
          scale={[Function]}
          tickValues={null}
          transform="translate(50, 10)"
        >
          <g
            className="axis"
            transform="translate(50, 10)"
          />
        </Axis>
        <Axis
          orientation="Left"
          scale={[Function]}
          tickValues={null}
          transform="translate(50, 10)"
        >
          <g
            className="axis"
            transform="translate(50, 10)"
          />
        </Axis>
        <Axis
          orientation="Bottom"
          scale={[Function]}
          tickValues={null}
          transform="translate(50, 450)"
        >
          <g
            className="axis"
            transform="translate(50, 450)"
          />
        </Axis>
        <Axis
          orientation="Right"
          scale={[Function]}
          tickValues={null}
          transform="translate(490, 10)"
        >
          <g
            className="axis"
            transform="translate(490, 10)"
          />
        </Axis>
        <Title
          className="x axis title"
          title="Time (hrs)"
          x={270}
          y={490}
        >
          <text
            className="x axis title"
            textAnchor="middle"
            transform="rotate(0, 270, 490)"
            x={270}
            y={490}
          >
            Time (hrs)
          </text>
        </Title>
        <Title
          className="y axis title"
          rotationAngle={-90}
          title="N"
          x={20}
          y={230}
        >
          <text
            className="y axis title"
            textAnchor="middle"
            transform="rotate(-90, 20, 230)"
            x={20}
            y={230}
          >
            N
          </text>
        </Title>
      </g>
    </Axes>
    <rect
      height={293.3333333333333}
      width={94}
      x={50}
      y={156.66666666666669}
    />
    <rect
      height={146.66666666666663}
      width={94}
      x={94}
      y={303.33333333333337}
    />
    <rect
      height={440}
      width={94}
      x={138}
      y={10}
    />
    <rect
      height={146.66666666666663}
      width={94}
      x={182}
      y={303.33333333333337}
    />
    <rect
      height={0}
      width={94}
      x={226}
      y={450}
    />
    <rect
      height={146.66666666666663}
      width={94}
      x={270}
      y={303.33333333333337}
    />
    <rect
      height={0}
      width={94}
      x={314}
      y={450}
    />
    <rect
      height={0}
      width={94}
      x={358}
      y={450}
    />
    <rect
      height={0}
      width={94}
      x={402}
      y={450}
    />
    <rect
      height={0}
      width={94}
      x={446}
      y={450}
    />
  </g>
</TotalTimeDistribution>
`;

exports[`TotalTimeDistribution should generate the plot for RSA 1`] = `
<TotalTimeDistribution
  height={500}
  partner={
    Partner {
      "code": "RSA",
      "name": "South Africa",
    }
  }
  proposals={
    Array [
      Object {
        "timeRequests": Array [
          Object {
            "partner": Partner {
              "code": "AMNH",
              "name": "American Museum of Natural History",
            },
            "time": 45360,
          },
          Object {
            "partner": Partner {
              "code": "RSA",
              "name": "South Africa",
            },
            "time": 0,
          },
        ],
      },
      Object {
        "timeRequests": Array [
          Object {
            "partner": Partner {
              "code": "AMNH",
              "name": "American Museum of Natural History",
            },
            "time": 79200,
          },
          Object {
            "partner": Partner {
              "code": "RSA",
              "name": "South Africa",
            },
            "time": 0,
          },
        ],
      },
      Object {
        "timeRequests": Array [
          Object {
            "partner": Partner {
              "code": "AMNH",
              "name": "American Museum of Natural History",
            },
            "time": 6840,
          },
          Object {
            "partner": Partner {
              "code": "RSA",
              "name": "South Africa",
            },
            "time": 0,
          },
          Object {
            "partner": Partner {
              "code": "UW",
              "name": "University of Wisconsin",
            },
            "time": 86040,
          },
        ],
      },
      Object {
        "timeRequests": Array [
          Object {
            "partner": Partner {
              "code": "AMNH",
              "name": "American Museum of Natural History",
            },
            "time": 90000,
          },
          Object {
            "partner": Partner {
              "code": "RSA",
              "name": "South Africa",
            },
            "time": 280800,
          },
        ],
      },
      Object {
        "timeRequests": Array [
          Object {
            "partner": Partner {
              "code": "AMNH",
              "name": "American Museum of Natural History",
            },
            "time": 212040,
          },
          Object {
            "partner": Partner {
              "code": "RSA",
              "name": "South Africa",
            },
            "time": 0,
          },
        ],
      },
      Object {
        "timeRequests": Array [
          Object {
            "partner": Partner {
              "code": "AMNH",
              "name": "American Museum of Natural History",
            },
            "time": 111600,
          },
          Object {
            "partner": Partner {
              "code": "RSA",
              "name": "South Africa",
            },
            "time": 356400,
          },
        ],
      },
      Object {
        "timeRequests": Array [
          Object {
            "partner": Partner {
              "code": "AMNH",
              "name": "American Museum of Natural History",
            },
            "time": 106200,
          },
          Object {
            "partner": Partner {
              "code": "RSA",
              "name": "South Africa",
            },
            "time": 0,
          },
        ],
      },
      Object {
        "timeRequests": Array [
          Object {
            "partner": Partner {
              "code": "AMNH",
              "name": "American Museum of Natural History",
            },
            "time": 28080,
          },
          Object {
            "partner": Partner {
              "code": "RSA",
              "name": "South Africa",
            },
            "time": 0,
          },
        ],
      },
    ]
  }
  width={500}
>
  <g
    className="histogram total-time-distribution"
  >
    <Axes
      domain={
        Array [
          0,
          100,
        ]
      }
      height={500}
      margins={
        Object {
          "bottom": 50,
          "left": 50,
          "right": 10,
          "top": 10,
        }
      }
      range={
        Array [
          0,
          1,
        ]
      }
      width={500}
      xAxisTitle="Time (hrs)"
      yAxisTitle="N"
    >
      <g
        className="axes"
      >
        <Axis
          orientation="Top"
          scale={[Function]}
          tickValues={null}
          transform="translate(50, 10)"
        >
          <g
            className="axis"
            transform="translate(50, 10)"
          />
        </Axis>
        <Axis
          orientation="Left"
          scale={[Function]}
          tickValues={null}
          transform="translate(50, 10)"
        >
          <g
            className="axis"
            transform="translate(50, 10)"
          />
        </Axis>
        <Axis
          orientation="Bottom"
          scale={[Function]}
          tickValues={null}
          transform="translate(50, 450)"
        >
          <g
            className="axis"
            transform="translate(50, 450)"
          />
        </Axis>
        <Axis
          orientation="Right"
          scale={[Function]}
          tickValues={null}
          transform="translate(490, 10)"
        >
          <g
            className="axis"
            transform="translate(490, 10)"
          />
        </Axis>
        <Title
          className="x axis title"
          title="Time (hrs)"
          x={270}
          y={490}
        >
          <text
            className="x axis title"
            textAnchor="middle"
            transform="rotate(0, 270, 490)"
            x={270}
            y={490}
          >
            Time (hrs)
          </text>
        </Title>
        <Title
          className="y axis title"
          rotationAngle={-90}
          title="N"
          x={20}
          y={230}
        >
          <text
            className="y axis title"
            textAnchor="middle"
            transform="rotate(-90, 20, 230)"
            x={20}
            y={230}
          >
            N
          </text>
        </Title>
      </g>
    </Axes>
    <rect
      height={0}
      width={94}
      x={50}
      y={450}
    />
    <rect
      height={0}
      width={94}
      x={94}
      y={450}
    />
    <rect
      height={0}
      width={94}
      x={138}
      y={450}
    />
    <rect
      height={0}
      width={94}
      x={182}
      y={450}
    />
    <rect
      height={0}
      width={94}
      x={226}
      y={450}
    />
    <rect
      height={0}
      width={94}
      x={270}
      y={450}
    />
    <rect
      height={0}
      width={94}
      x={314}
      y={450}
    />
    <rect
      height={440}
      width={94}
      x={358}
      y={10}
    />
    <rect
      height={0}
      width={94}
      x={402}
      y={450}
    />
    <rect
      height={440}
      width={94}
      x={446}
      y={10}
    />
  </g>
</TotalTimeDistribution>
`;

exports[`TotalTimeDistribution should generate the plot for UW 1`] = `
<TotalTimeDistribution
  height={500}
  partner={
    Partner {
      "code": "UW",
      "name": "University of Wisconsin",
    }
  }
  proposals={
    Array [
      Object {
        "timeRequests": Array [
          Object {
            "partner": Partner {
              "code": "AMNH",
              "name": "American Museum of Natural History",
            },
            "time": 45360,
          },
          Object {
            "partner": Partner {
              "code": "RSA",
              "name": "South Africa",
            },
            "time": 0,
          },
        ],
      },
      Object {
        "timeRequests": Array [
          Object {
            "partner": Partner {
              "code": "AMNH",
              "name": "American Museum of Natural History",
            },
            "time": 79200,
          },
          Object {
            "partner": Partner {
              "code": "RSA",
              "name": "South Africa",
            },
            "time": 0,
          },
        ],
      },
      Object {
        "timeRequests": Array [
          Object {
            "partner": Partner {
              "code": "AMNH",
              "name": "American Museum of Natural History",
            },
            "time": 6840,
          },
          Object {
            "partner": Partner {
              "code": "RSA",
              "name": "South Africa",
            },
            "time": 0,
          },
          Object {
            "partner": Partner {
              "code": "UW",
              "name": "University of Wisconsin",
            },
            "time": 86040,
          },
        ],
      },
      Object {
        "timeRequests": Array [
          Object {
            "partner": Partner {
              "code": "AMNH",
              "name": "American Museum of Natural History",
            },
            "time": 90000,
          },
          Object {
            "partner": Partner {
              "code": "RSA",
              "name": "South Africa",
            },
            "time": 280800,
          },
        ],
      },
      Object {
        "timeRequests": Array [
          Object {
            "partner": Partner {
              "code": "AMNH",
              "name": "American Museum of Natural History",
            },
            "time": 212040,
          },
          Object {
            "partner": Partner {
              "code": "RSA",
              "name": "South Africa",
            },
            "time": 0,
          },
        ],
      },
      Object {
        "timeRequests": Array [
          Object {
            "partner": Partner {
              "code": "AMNH",
              "name": "American Museum of Natural History",
            },
            "time": 111600,
          },
          Object {
            "partner": Partner {
              "code": "RSA",
              "name": "South Africa",
            },
            "time": 356400,
          },
        ],
      },
      Object {
        "timeRequests": Array [
          Object {
            "partner": Partner {
              "code": "AMNH",
              "name": "American Museum of Natural History",
            },
            "time": 106200,
          },
          Object {
            "partner": Partner {
              "code": "RSA",
              "name": "South Africa",
            },
            "time": 0,
          },
        ],
      },
      Object {
        "timeRequests": Array [
          Object {
            "partner": Partner {
              "code": "AMNH",
              "name": "American Museum of Natural History",
            },
            "time": 28080,
          },
          Object {
            "partner": Partner {
              "code": "RSA",
              "name": "South Africa",
            },
            "time": 0,
          },
        ],
      },
    ]
  }
  width={500}
>
  <g
    className="histogram total-time-distribution"
  >
    <Axes
      domain={
        Array [
          0,
          100,
        ]
      }
      height={500}
      margins={
        Object {
          "bottom": 50,
          "left": 50,
          "right": 10,
          "top": 10,
        }
      }
      range={
        Array [
          0,
          1,
        ]
      }
      width={500}
      xAxisTitle="Time (hrs)"
      yAxisTitle="N"
    >
      <g
        className="axes"
      >
        <Axis
          orientation="Top"
          scale={[Function]}
          tickValues={null}
          transform="translate(50, 10)"
        >
          <g
            className="axis"
            transform="translate(50, 10)"
          />
        </Axis>
        <Axis
          orientation="Left"
          scale={[Function]}
          tickValues={null}
          transform="translate(50, 10)"
        >
          <g
            className="axis"
            transform="translate(50, 10)"
          />
        </Axis>
        <Axis
          orientation="Bottom"
          scale={[Function]}
          tickValues={null}
          transform="translate(50, 450)"
        >
          <g
            className="axis"
            transform="translate(50, 450)"
          />
        </Axis>
        <Axis
          orientation="Right"
          scale={[Function]}
          tickValues={null}
          transform="translate(490, 10)"
        >
          <g
            className="axis"
            transform="translate(490, 10)"
          />
        </Axis>
        <Title
          className="x axis title"
          title="Time (hrs)"
          x={270}
          y={490}
        >
          <text
            className="x axis title"
            textAnchor="middle"
            transform="rotate(0, 270, 490)"
            x={270}
            y={490}
          >
            Time (hrs)
          </text>
        </Title>
        <Title
          className="y axis title"
          rotationAngle={-90}
          title="N"
          x={20}
          y={230}
        >
          <text
            className="y axis title"
            textAnchor="middle"
            transform="rotate(-90, 20, 230)"
            x={20}
            y={230}
          >
            N
          </text>
        </Title>
      </g>
    </Axes>
    <rect
      height={0}
      width={94}
      x={50}
      y={450}
    />
    <rect
      height={0}
      width={94}
      x={94}
      y={450}
    />
    <rect
      height={440}
      width={94}
      x={138}
      y={10}
    />
    <rect
      height={0}
      width={94}
      x={182}
      y={450}
    />
    <rect
      height={0}
      width={94}
      x={226}
      y={450}
    />
    <rect
      height={0}
      width={94}
      x={270}
      y={450}
    />
    <rect
      height={0}
      width={94}
      x={314}
      y={450}
    />
    <rect
      height={0}
      width={94}
      x={358}
      y={450}
    />
    <rect
      height={0}
      width={94}
      x={402}
      y={450}
    />
    <rect
      height={0}
      width={94}
      x={446}
      y={450}
    />
  </g>
</TotalTimeDistribution>
`;
